--- a/src/fresh-theme-henlo/src/partials/html/section/interests.hbs
+++ b/src/fresh-theme-henlo/src/partials/html/section/interests.hbs
@@ -1,16 +1,16 @@
 {{#> molecule-section sectionId='interests' sectionTitleKey='INTERESTS' data=r.interests}}
-  {{#*inline 'section-gallery-item'}}
-    <div class="hvpod hvpod--interest">
-      <div class="hvpod-block">
-        <h3 class="hvpod-title">{{{ name }}}</h3>
+{{#*inline 'section-gallery-item'}}
+<div class="hvpod hvpod--interest">
+	<div class="hvpod-block" id="hvpod-block-item">
+		<h3 class="hvpod-title">{{{ name }}}</h3>
 
-        <div class="hvpod-element">
-          {{{ summary }}}
-        </div>
-        <div class="hvpod-element hvpod-element--highlights">
-          {{> highlights }}
-        </div>
-      </div>
-    </div>
-  {{/inline}}
+		<div class="hvpod-element">
+			{{{ summary }}}
+		</div>
+		<div class="hvpod-element hvpod-element--highlights">
+			{{> highlights }}
+		</div>
+	</div>
+</div>
+{{/inline}}
 {{/molecule-section}}
